Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8920

Opening an empty XML file fails...

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.7.0
    • Qt Creator 2.7.0
    • Editors
    • None
    • Linux
    • c190b5dad9473bc49c3c870c626f2037eae4281f

      ...and pops a message "foo.xml does not appear to be a valid application descriptor file"

      The message comes from QNX BarDescriptorDocument::open().

      After a short investigation, it looks like the magic matcher is not registered correctly (or just doesn't work ).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes