Fix opening of xml files.

They were either opened as text/plain, or, if they were empty, as
application/vnd.rim.qnx.bar_descriptor types.
This hotfix makes the mime database consider lower levels for matching
by extension, if no match with maxweight was found, and reduces the
weight of the application/xml type's ".xml" extension, so the
bar_descriptor type can override this based on its content matcher.

We should do a real fix in post-2.7.

Task-number: QTCREATORBUG-8920
Change-Id: I3d6f4455ba23485d0229967eaa3eea6abe19746f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Nätterlund <tobias.naetterlund@kdab.com>